# dramacraft

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  PROJECT_COMPLETION_REPORT.md  PROJECT_STATUS_REPORT.md  README.md  TASK_COMPLETION_REPORT.md  docker-compose.prod.yml  docker-compose.yml  mkdocs.complex.yml  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  docs.yml  quality.yml  release.yml
configs/: README.md
configs/mcp/: claude_desktop_config.json  cursor_mcp.json  generic-mcp.json
docker/: config.yaml  entrypoint.sh
docs/: api-reference.md  best-practices.md  index.md  quick-start.md
docs/api-reference/: index.md
docs/assets/stylesheets/: extra.css
docs/getting-started/: index.md
scripts/: build_docs.py  check_deployment.py  check_links.py  deploy.sh  dev.py  docs_stats.py  generate_api_docs.py  run_tests.py  setup.sh  validate_docs.py
src/dramacraft/: __init__.py  cli.py  config.py  server.py
src/dramacraft/ai/: director.py
src/dramacraft/analysis/: deep_analyzer.py
src/dramacraft/analysis/docs/: README.md
src/dramacraft/audio/: enhancer.py
src/dramacraft/automation/: __init__.py  engine.py  jianying_engine.py
src/dramacraft/config/: json_schemas.py
src/dramacraft/docs/: __init__.py  generator.py
src/dramacraft/docs/static/css/: main.css
src/dramacraft/docs/static/js/: main.js
src/dramacraft/effects/: auto_effects.py
src/dramacraft/features/: __init__.py  commentary.py  narrative.py  remix.py
src/dramacraft/integration/: jianying_draft_v2.py
src/dramacraft/llm/: __init__.py  alibaba.py  baidu.py  base.py  factory.py
src/dramacraft/llm/docs/: README.md
src/dramacraft/microservices/: __init__.py  gateway.py  registry.py
src/dramacraft/models/: series.py
src/dramacraft/monitoring/: performance.py
src/dramacraft/performance/: __init__.py  cache.py
src/dramacraft/security/: __init__.py  audit.py  auth.py  encryption.py  mfa.py  rbac.py
src/dramacraft/sync/: timeline_sync.py
src/dramacraft/tools/: __init__.py  commentary_generation.py  series_compilation.py
src/dramacraft/utils/: __init__.py  helpers.py  logging.py
src/dramacraft/video/: __init__.py  draft.py  jianying.py  jianying_control.py  jianying_format.py  processor.py
src/dramacraft/video/docs/: README.md
src/dramacraft/workflow/: automation.py
tests/: __init__.py  test_basic_functionality.py  test_config.py  test_config_schemas.py  test_integration.py  test_jianying_integration.py  test_llm.py  test_llm_integration.py  test_mcp_server.py  test_performance.py  test_security.py  test_series_compilation.py  test_video_processing.py
